tests/ui/traits/fn-pointer/suggest-wrap-parens.rs
//@ run-rustfix

trait Foo {}

impl Foo for fn() {}

fn main() {
    let _x: &dyn Foo = &main;
    //~^ ERROR the trait bound
}
